--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,16 +8,27 @@ phases:
       - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 023770199924.dkr.ecr.us-east-1.amazonaws.com
       - REPOSITORY_URI=023770199924.dkr.ecr.us-east-1.amazonaws.com/bia
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-      - IMAGE_TAG=${COMMIT_HASH:=latest}
+      - IMAGE_TAG${APP_VERSION}-$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
+      #- IMAGE_TAG=${COMMIT_HASH:=latest}
   build:
     commands:
       - echo Build iniciado em `date`
       - echo Gerando imagem da BIA...
       - docker build -t $REPOSITORY_URI:latest .
       - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
+      - echo Build finalizado em `date`
+  test:
+    commands:
+      - echo Testes iniciados em `date`
+      - echo Executando testes...
+      - docker run -e CI=true $REPOSITORY_URI:latest npm run test
+      - echo Testes finalizados em `date`
+      - echo Inicializando testes de Vunerabilidade... em `date`
+      - docker run -e CI=true $REPOSITORY_URI:latest npm run test:security
+      - docker run --rm aquasec/trivy image --exit-code 1 $REPOSITORY_URI:$IMAGE_TAG
+      - echo Finalizando testes de Vunerabilidade... em `date`
   post_build:
     commands:
-      - echo Build finalizado com sucesso em `date`
       - echo Fazendo push da imagem para o ECR...
       - docker push $REPOSITORY_URI:latest
       - docker push $REPOSITORY_URI:$IMAGE_TAG
