--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,14 +1,24 @@
 version: 0.2
 
+env:
+  variables:
+    APP_VERSION: "1.0.0"
+    AWS_REGION: "us-east-1"
 phases:
+  install:
+    commands:
+      - echo Instalando dependências...
+      - npm install
+      - npm install -g trivy
   pre_build:
     commands:
       - echo Fazendo login no ECR...
       - aws --version
-      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 023770199924.dkr.ecr.us-east-1.amazonaws.com
-      - REPOSITORY_URI=023770199924.dkr.ecr.us-east-1.amazonaws.com/bia
+      - AWS_ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
+      - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
+      - REPOSITORY_URI=$AWS_ACCOUNT_ID.dkr.ecr.#AWS_REGION.amazonaws.com/bia
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-      - IMAGE_TAG${APP_VERSION}-$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
+      - IMAGE_TAG=${APP_VERSION}-$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       #- IMAGE_TAG=${COMMIT_HASH:=latest}
   build:
     commands:
